# benchmark

./: .gitignore  .releaserc.json  LICENSE  README.md  TESTING.md  evaluate.py  inference.py  main.py  model.py  package-lock.json  package.json  preprocessing.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_tests.py  test_transcription.py  train.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: TESTING.md
harpertoken/: dataset.py  evaluate.py  model.py  preprocessing.py  train.py
scripts/: commit-msg  inference.py  pre-push  rewrite_msg.sh  update_version.py
src/: dataset.py  preprocessing.py  train.py
tests/: test_transcription.py  test_unit.py
